<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingVertical="24dp"
    android:paddingHorizontal="24dp"
    tools:context=".settings.activity.PasswordChangeActivity">

    <!-- 뒤로가기 버튼 -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_arrow_back_48dp"
        android:contentDescription="@string/btn_back"
        android:background="@color/white"
        android:onClick="onBackButtonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 현재 비밀번호 라벨 -->
    <TextView
        android:id="@+id/passwordNowLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_now"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- 현재 비밀번호 입력 -->
    <EditText
        android:id="@+id/passwordNowInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_now"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordNowLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- 새 비밀번호 라벨 -->
    <TextView
        android:id="@+id/passwordNewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_new"
        app:layout_constraintTop_toBottomOf="@id/passwordNowInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- 새 비밀번호 입력 -->
    <EditText
        android:id="@+id/passwordNewInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_new"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordNewLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- 새 비밀번호 확인 라벨 -->
    <TextView
        android:id="@+id/passwordCheckLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_check"
        app:layout_constraintTop_toBottomOf="@id/passwordNewInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- 새 비밀번호 확인 입력 -->
    <EditText
        android:id="@+id/passwordCheckInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_new"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordCheckLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- 변경 버튼 -->
    <Button
        android:id="@+id/changeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"
        android:onClick="onChangeButtonClick"
        app:layout_constraintTop_toBottomOf="@id/passwordCheckInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>