<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.activity.SignupActivity"
    android:paddingVertical="48dp"
    android:paddingHorizontal="24dp">

    <!-- 작은 로고 -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_logo"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 이메일 입력 -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:autofillHints="email"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 비밀번호 입력 -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- 비밀번호 확인 입력 -->
    <EditText
        android:id="@+id/passwordCheckEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="off"
        android:hint="@string/auth_password_check"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- 닉네임 입력 -->
    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="off"
        android:hint="@string/auth_nickname"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordCheckEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- 회원가입 버튼 -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:textColor="@android:color/white"
        android:onClick="onSignupButtonClick"
        app:layout_constraintTop_toBottomOf="@id/nicknameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 이미 계정이 있습니다. -->
    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onLoginTextClick"
        android:layout_marginTop="16dp"
        android:text="@string/auth_login"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>