<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.activity.LoginActivity"
    android:paddingVertical="48dp"
    android:paddingHorizontal="24dp">

    <!-- 작은 로고 -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_logo"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 이메일 입력 -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:autofillHints="email"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 비밀번호 입력 -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- 로그인 버튼 -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:onClick="onLoginButtonClick"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 계정이 없습니다. -->
    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSignupTextClick"
        android:layout_marginTop="16dp"
        android:text="@string/auth_sign_up"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/divideLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/signupTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 왼쪽 선 -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"/>

        <!-- OR 텍스트 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:paddingHorizontal="8dp"/>

        <!-- 오른쪽 선 -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <!-- 구글 로그인 버튼 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_for_google"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/black"
        android:elevation="2dp"
        android:drawableStart="@drawable/icon_google"
        android:onClick="onLoginForGoogleButtonClick"
        app:layout_constraintTop_toBottomOf="@id/divideLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>